add wrapper icon

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -32,7 +32,9 @@
         <!-- Animation block -->
         <div class="col-half">
           <div class="inner align-center">
-              <span class="fa fa-heart"></span>
+            <div class="icon-wrapper">
+              <span class="fa fa-heart ani1"></span>
+            </div>
           </div>
         </div>
       </div>
